--- a/style_sheet.css
+++ b/style_sheet.css
@@ -686,3 +686,86 @@ svg text {
 .about-content p span{
     color: var(--primary-color);
 }
+
+/* loding animation */
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(185, 183, 183, 0.925);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.5s ease-out;
+}
+.hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+.login-container {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    margin-bottom: 20px;
+    display: none;
+}
+.login-container input {
+    display: block;
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px;
+    border: 1px solid #e6e5e5;
+    border-radius: 5px;
+}
+.login-container button {
+    background: #007BFF;
+    color: white;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.book {
+    width: 100px;
+    height: 120px;
+    position: relative;
+    perspective: 600px;
+}
+.page {
+    width: 100px;
+    height: 120px;
+    background: #2c2b2b;
+    border: 2px solid black;
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    transform-origin: left;
+    animation: flip 1.2s infinite ease-in-out;
+}
+.page:nth-child(2) {
+    animation-delay: 0.5s;
+}
+.page:nth-child(3) {
+    animation-delay: 1s;
+}
+@keyframes flip {
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(-180deg);
+    }
+    100% {
+        transform: rotateY(-180deg);
+        opacity: 0;
+    }
+}
+
+
